adilqadri_project/nohup.out
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
?: (staticfiles.W004) The directory '/project/sandbox/user-workspace/adilqadri_project/static' in the STATICFILES_DIRS setting does not exist.

System check identified 1 issue (0 silenced).
[29/Apr/2025 10:42:55] "GET / HTTP/1.1" 200 8786
Not Found: /favicon.ico
[29/Apr/2025 10:42:58] "GET /favicon.ico HTTP/1.1" 404 3038
Performing system checks...

April 29, 2025 - 10:42:24
Django version 5.2, using settings 'adilqadri_project.settings'
Starting development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/home/codespace/.python/current/lib/python3.10/threading.py", line 1016, in _bootstrap_inner
    self.run()
  File "/home/codespace/.python/current/lib/python3.10/threading.py", line 953, in run
    self._target(*self._args, **self._kwargs)
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/core/management/commands/runserver.py", line 134, in inner_run
    self.check(**check_kwargs)
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/core/management/base.py", line 492, in check
    all_issues = checks.run_checks(
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/core/checks/registry.py", line 89, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/core/checks/urls.py", line 136, in check_custom_error_handlers
    handler = resolver.resolve_error_handler(status_code)
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/urls/resolvers.py", line 732, in resolve_error_handler
    callback = getattr(self.urlconf_module, "handler%s" % view_type, None)
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/utils/functional.py", line 47, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/urls/resolvers.py", line 711, in urlconf_module
    return import_module(self.urlconf_name)
  File "/home/codespace/.python/current/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/project/sandbox/user-workspace/adilqadri_project/adilqadri_project/urls.py", line 23, in <module>
    path("", include("store.urls")),
  File "/home/codespace/.python/current/lib/python3.10/site-packages/django/urls/conf.py", line 39, in include
    urlconf_module = import_module(urlconf_module)
  File "/home/codespace/.python/current/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/project/sandbox/user-workspace/adilqadri_project/store/urls.py", line 2, in <module>
    from . import views
  File "/project/sandbox/user-workspace/adilqadri_project/store/views.py", line 22
    from django.shortcuts import render, get_object_or_404, redirect
    ^^^^
SyntaxError: invalid syntax
